# Sistema_De_Tickets

./: .gitignore  Bang.cpp  Bienvenida.md  CMakeLists.txt  Readme.md  holamundo.cpp  holamundoenPy.py  main.cpp  main.py  main2.py  test2.cpp
Main/: CalcularTiempo.h  CalendarioTerminal.h  Controladores.h  PrepararEntorno.py  ProyectoFund.cpp  RegistroDAO.h  UsuariosEntity.h  VerifyWinget.ps1  holamundo.cpp
